--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ feedgenerator==1.7
 paramiko==1.12.0
 pelican==3.3
 pycrypto==2.6.1
+python-slugify==0.0.6
 pytz==2013.7
 six==1.4.1
+webassets==0.8
 wsgiref==0.1.2
