--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "hexo-site",
-  "version": "2.8.3",
+  "version": "0.0.0",
   "private": true,
-  "devDependencies": {
-    "hexo": "~2.8.2",
+  "hexo": {
+    "version": "3.0.1"
+  },
+  "dependencies": {
+    "hexo": "git://github.com/nt3rp/hexo.git",
     "hexo-deployer-s3": "git://github.com/nt3rp/hexo-deployer-s3.git",
-    "hexo-generator-feed": "git://github.com/nt3rp/hexo-generator-feed.git",
-    "hexo-generator-sitemap": "~0.2.0",
+    "hexo-generator-archive": "^0.1.0",
+    "hexo-generator-category": "^0.1.0",
+    "hexo-generator-feed": "^1.0.1",
+    "hexo-generator-index": "^0.1.0",
+    "hexo-generator-sitemap": "^1.0.1",
+    "hexo-generator-tag": "^0.1.0",
     "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-marked": "^0.1",
-    "hexo-renderer-stylus": "^0.1"
+    "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-stylus": "^0.2.0",
+    "hexo-server": "^0.1.2"
   }
 }
