--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.0.1"
   },
   "dependencies": {
-    "hexo": "git://github.com/nt3rp/hexo.git",
+    "hexo": "git://github.com/hexojs/hexo.git",
     "hexo-deployer-s3": "git://github.com/nt3rp/hexo-deployer-s3.git",
     "hexo-generator-archive": "^0.1.0",
     "hexo-generator-category": "^0.1.0",
