--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "deploy": "`npm bin`/hexo generate; `npm bin`/hexo deploy",
+    "start": "`npm bin`/hexo server"
+  },
   "hexo": {
     "version": "3.0.1"
   },
