--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hexo-generator-sitemap": "^1.0.1",
     "hexo-generator-tag": "^0.1.0",
     "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-markdown-it": "^3.3.1",
     "hexo-renderer-stylus": "^0.2.0",
     "hexo-server": "^0.1.2"
   }
