Added header linking config
Still need to change style to hide P link

--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,15 @@ deploy:
 # Custom Settings
 ## Archives (Pagination?)
 
+# Markdown
+markdown:
+  anchors:
+    level: 2
+    collisionSuffix: 'v'
+    permalink: true
+    permalinkClass: header-anchor
+    permalinkSymbol: ¶
+
 ## Feed Generator
 feed:
   type: rss2
