--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "`npm bin`/hexo server"
   },
   "hexo": {
-    "version": "3.0.1"
+    "version": "3.2.0"
   },
   "dependencies": {
-    "hexo": "git://github.com/hexojs/hexo.git",
-    "hexo-deployer-s3": "git://github.com/nt3rp/hexo-deployer-s3.git",
+    "hexo": "^3.2.0",
+    "hexo-deployer-s3": "^0.2.0",
     "hexo-generator-archive": "^0.1.0",
     "hexo-generator-category": "^0.1.0",
     "hexo-generator-feed": "^1.0.1",
