Adds some config that kind of works

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-lodash": "next",
     "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-netlify-cms": "^3.0.0-beta.0",
     "gatsby-plugin-nprogress": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
@@ -27,10 +28,11 @@
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.4",
     "moment": "^2.22.2",
+    "netlify-cms": "^2.0.11",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-disqus-comments": "^1.1.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-share": "^2.0.0",
     "react-twitter-widgets": "^1.7.1",
